// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SubHeaderBar should render SubHeaderBarActions (default + center) 1`] = `
<div
  className=""
>
  <ActionBar
    className="subheader-navbar"
  >
    <SubHeaderBarActions
      center={false}
      className={undefined}
      components={
        Array [
          Object {
            "injectedComponent": <Action
              bsStyle="link"
              className={undefined}
              hideLabel={true}
              icon="talend-arrow-left"
              id="backArrow"
              label="backArrow"
              onClick={[Function]}
        />,
          },
          Object {
            "injectedComponent": <InputTitleSubHeader
              editMode={false}
              title="myTitle"
        />,
          },
        ]
      }
      left={true}
      right={false}
    />
    <SubHeaderBarActions
      center={true}
      className="undefined"
      components={
        Array [
          Object {
            "injectedComponent": <Action
              bsStyle="link"
              hideLabel={true}
              icon="talend-activity"
              label="action3"
              onClick={[Function]}
        />,
          },
        ]
      }
      left={false}
      right={false}
    />
  </ActionBar>
</div>
`;

exports[`SubHeaderBar should render SubHeaderBarActions (default + custom) 1`] = `
<div
  className=""
>
  <ActionBar
    className="subheader-navbar"
  >
    <SubHeaderBarActions
      center={false}
      className={undefined}
      components={
        Array [
          Object {
            "injectedComponent": <Action
              bsStyle="link"
              className={undefined}
              hideLabel={true}
              icon="talend-arrow-left"
              id="backArrow"
              label="backArrow"
              onClick={[Function]}
        />,
          },
          Object {
            "injectedComponent": <InputTitleSubHeader
              editMode={false}
              title="myTitle"
        />,
          },
        ]
      }
      left={true}
      right={false}
    />
    <SubHeaderBarActions
      center={true}
      className="undefined undefined"
      components={
        Array [
          Object {
            "injectedComponent": <Action
              bsStyle="link"
              hideLabel={true}
              icon="talend-activity"
              label="action3"
              onClick={[Function]}
        />,
          },
        ]
      }
      left={false}
      right={false}
    />
    <SubHeaderBarActions
      center={false}
      className={undefined}
      components={
        Array [
          Object {
            "injectedComponent": <Action
              bsStyle="link"
              hideLabel={true}
              icon="talend-share-alt"
              label="action1"
              onClick={[Function]}
        />,
          },
          Object {
            "injectedComponent": <Action
              bsStyle="link"
              hideLabel={true}
              icon="talend-activity"
              label="action2"
              onClick={[Function]}
        />,
          },
        ]
      }
      left={false}
      right={true}
    />
  </ActionBar>
</div>
`;

exports[`SubHeaderBar should render SubHeaderBarActions (default + left) 1`] = `
<div
  className=""
>
  <ActionBar
    className="subheader-navbar"
  >
    <SubHeaderBarActions
      center={false}
      className={undefined}
      components={
        Array [
          Object {
            "injectedComponent": <Action
              bsStyle="link"
              className={undefined}
              hideLabel={true}
              icon="talend-arrow-left"
              id="backArrow"
              label="backArrow"
              onClick={[Function]}
        />,
          },
          Object {
            "injectedComponent": <InputTitleSubHeader
              editMode={false}
              title="myTitle"
        />,
          },
          Object {
            "injectedComponent": <Action
              bsStyle="link"
              hideLabel={true}
              icon="talend-share-alt"
              label="action0"
              onClick={[Function]}
        />,
          },
        ]
      }
      left={true}
      right={false}
    />
  </ActionBar>
</div>
`;

exports[`SubHeaderBar should render SubHeaderBarActions (default + right) 1`] = `
<div
  className=""
>
  <ActionBar
    className="subheader-navbar"
  >
    <SubHeaderBarActions
      center={false}
      className={undefined}
      components={
        Array [
          Object {
            "injectedComponent": <Action
              bsStyle="link"
              className={undefined}
              hideLabel={true}
              icon="talend-arrow-left"
              id="backArrow"
              label="backArrow"
              onClick={[Function]}
        />,
          },
          Object {
            "injectedComponent": <InputTitleSubHeader
              editMode={false}
              title="myTitle"
        />,
          },
        ]
      }
      left={true}
      right={false}
    />
    <SubHeaderBarActions
      center={false}
      className={undefined}
      components={
        Array [
          Object {
            "injectedComponent": <Action
              bsStyle="link"
              hideLabel={true}
              icon="talend-share-alt"
              label="action1"
              onClick={[Function]}
        />,
          },
          Object {
            "injectedComponent": <Action
              bsStyle="link"
              hideLabel={true}
              icon="talend-activity"
              label="action2"
              onClick={[Function]}
        />,
          },
        ]
      }
      left={false}
      right={true}
    />
  </ActionBar>
</div>
`;

exports[`SubHeaderBar should render SubHeaderBarActions (default) 1`] = `
<div
  className=""
>
  <ActionBar
    className="subheader-navbar"
  >
    <SubHeaderBarActions
      center={false}
      className={undefined}
      components={
        Array [
          Object {
            "injectedComponent": <Action
              bsStyle="link"
              className={undefined}
              hideLabel={true}
              icon="talend-arrow-left"
              id="backArrow"
              label="backArrow"
              onClick={[Function]}
        />,
          },
          Object {
            "injectedComponent": <InputTitleSubHeader
              editMode={false}
              title="myTitle"
        />,
          },
        ]
      }
      left={true}
      right={false}
    />
  </ActionBar>
</div>
`;

exports[`SubHeaderBarActions should render with center props 1`] = `
<div
  className="myClassName"
>
  <Content
    center={true}
    left={false}
    right={false}
    tag={undefined}
  >
    <Action
      bsStyle="link"
      hideLabel={true}
      icon="talend-share-alt"
      label="action1"
      onClick={[Function]}
    />
  </Content>
  <Content
    center={true}
    left={false}
    right={false}
    tag={undefined}
  >
    <Action
      bsStyle="link"
      hideLabel={true}
      icon="talend-activity"
      label="action2"
      onClick={[Function]}
    />
  </Content>
  <Content
    center={true}
    left={false}
    right={false}
    tag={undefined}
  >
    <Icon
      name="talend-bell"
    />
  </Content>
</div>
`;

exports[`SubHeaderBarActions should render with left props 1`] = `
<div
  className="myClassName"
>
  <Content
    center={false}
    left={true}
    right={false}
    tag={undefined}
  >
    <Action
      bsStyle="link"
      hideLabel={true}
      icon="talend-share-alt"
      label="action1"
      onClick={[Function]}
    />
  </Content>
  <Content
    center={false}
    left={true}
    right={false}
    tag={undefined}
  >
    <Action
      bsStyle="link"
      hideLabel={true}
      icon="talend-activity"
      label="action2"
      onClick={[Function]}
    />
  </Content>
  <Content
    center={false}
    left={true}
    right={false}
    tag={undefined}
  >
    <Icon
      name="talend-bell"
    />
  </Content>
</div>
`;

exports[`SubHeaderBarActions should render with right props 1`] = `
<div
  className="myClassName"
>
  <Content
    center={false}
    left={false}
    right={true}
    tag={undefined}
  >
    <Action
      bsStyle="link"
      hideLabel={true}
      icon="talend-share-alt"
      label="action1"
      onClick={[Function]}
    />
  </Content>
  <Content
    center={false}
    left={false}
    right={true}
    tag={undefined}
  >
    <Action
      bsStyle="link"
      hideLabel={true}
      icon="talend-activity"
      label="action2"
      onClick={[Function]}
    />
  </Content>
  <Content
    center={false}
    left={false}
    right={true}
    tag={undefined}
  >
    <Icon
      name="talend-bell"
    />
  </Content>
</div>
`;
